added snake page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class='nav-icons'>
         <a href="index.html">return home</a> 
         <a href="process.html">process</a> 
-        <a href="index.html">how about something else</a> 
+        <a href="games.html">games</a> 
     </div>
 
 </div>
@@ -25,9 +25,11 @@
 <div>
     <h3> this is a basic html document </h3>
 
+    <a href="process.html">process page is here</a> 
+
     <h3> that we can use </h3>
 
-    <a href="process.html">process page is here</a> 
+    <a href="games.html">here's a snake game, just to test</a>
 </div>
 
 </html>
