--- a/sample.html
+++ b/sample.html
@@ -23,13 +23,11 @@
 </div>
 
 <div>
+    <h1> this is the largest font</h1>
+    <h2> the next biggest </h2>
     <h3> this is a basic html document </h3>
+    <p> this is just normal text</p>
 
-    <a href="process.html">process page is here</a> 
-
-    <h3> that we can use </h3>
-
-    <a href="games.html">here's a snake game, just to test</a>
 </div>
 
 </html>
