--- a/map.html
+++ b/map.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="map.css">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;600&display=swap" rel="stylesheet">
+    <!-- inspired by https://codepen.io/enatario/pen/eKzxzY -->
 </head>
 <body>
 
@@ -10,7 +12,7 @@
 <div class='header'>
 
     <div class='site-title'>
-        <h1>WOMEN TAKE THE STREETS</h1>
+        <h1>SITE TITLE</h1>
     </div>
 
     <div class='nav-icons'>
@@ -23,13 +25,15 @@
 </div>
 
 <div>
+    <h1> this is the largest font</h1>
+    <h2> the next biggest </h2>
     <h3> this is a basic html document </h3>
+    <p> this is just normal text</p>
 
-    <a href="process.html">process page is here</a> 
+    <div>
+        <p>you could insert the code for the leaflet map here</p>
+    </div>
 
-    <h3> that we can use </h3>
-
-    <a href="games.html">here's a snake game, just to test</a>
 </div>
 
 </html>
