--- a/cards.html
+++ b/cards.html
@@ -27,24 +27,20 @@
 
 <div>
     <h1> Women of Cambridge Cards</h1>
-    <h2> the next biggest </h2>
     <h3> About</h3>
-    <p> this is just normal text</p>
+    <p> This is a set of playing cards featuring women from the history of Cambridge, Massachusetts. Order a copy for your classroom from the Cambridge Historical Commission!/p>
 
     <div>
         <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                <img src="WC_4.png" alt="Nadia" style="width:280.8px;height:386.64px;">
               </div>
               <div class="flip-card-back">
-                <h1>John Doe</h1>
-                <p>Architect & Engineer</p>
-                <p>We love that guy</p>
+                <img src="WC_Back.png" alt="Back" style="width:280.8px;height:386.64px;">
               </div>
             </div>
           </div>
-          
     </div>
 
 </div>
