--- a/cards.html
+++ b/cards.html
@@ -28,19 +28,36 @@
 <div>
     <h1> Women of Cambridge Cards</h1>
     <h3> About</h3>
-    <p> This is a set of playing cards featuring women from the history of Cambridge, Massachusetts. Order a copy for your classroom from the Cambridge Historical Commission!/p>
-
+    <p> This set of playing cards features a diverse group of women from the history of Cambridge, Massachusetts.
+        <br /> <br /> Order your own copy from the <a href="https://www.cambridgema.gov/historic/contactforms/historicalcommission">Cambridge Historical Commission</a> to use in your classroom,<br /> or make your own set with your students using the template below.</p>
     <div>
-        <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="WC_4.png" alt="Nadia" style="width:280.8px;height:386.64px;">
-              </div>
-              <div class="flip-card-back">
-                <img src="WC_Back.png" alt="Back" style="width:280.8px;height:386.64px;">
-              </div>
+        <div class="container">
+            <div style="float:left;width:30%">
+                <img src="WC_Back.png">
             </div>
-          </div>
+            <div style="float:left;width:30%">
+                <img src="WC_5.png">
+            </div>
+        </div>
+
+<div>
+    <br />
+    <h3 style="clear:left;"> Ways to Use these Cards</h3>
+    <ol>
+        <li>Play <a href="https://www.teachstarter.com/us/blog/nine-nifty-ways-use-pack-cards-classroom-us/">math games</a> or 
+            <a href="https://busyteacher.org/17617-deck-of-cards-5-simple-language-activities.html">use them to practice a new language</a></li>
+        <li>Use them to
+            <a href="https://scratch.mit.edu/search/projects?q=card%20game">create a card game in Scratch</a></li>
+        <li>Use them as inspiration to create your own Women of Cambridge deck</li>
+    </div>
+<div>
+    <h3 style="clear:left;"> More Resources on Cambridge History</h3>
+   <ol>
+        <li><a href="https://www2.cambridgema.gov/Historic/CWHP/index_alpha.html">Cambridge Women's Heritage Project</a></li>
+        <li><a href="https://www.blackhistory.mit.edu/about">MIT Black History Project</a></li>
+        <li><a href="https://www.cambridgema.gov/historic">Cambridge Historical Commission</a></li>
+        <li><a href="https://www.cambridgeblacktrailblazers.com/">Cambridge Black Trailblazers</a></li>
+      </ol> </p>
     </div>
 
 </div>
