--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="process.html">process</a> 
         <a href="games.html">games</a>
         <a href="map.html">map</a> 
+        <a href="cards.html">Women of Cambridge Cards</a> 
     </div>
 
 </div>
