Webmap and Index updates
Osamu has added the webmap 1.0 and added some text and links to the index page.

--- a/index.html
+++ b/index.html
@@ -17,19 +17,34 @@
         <a href="index.html">return home</a> 
         <a href="process.html">process</a> 
         <a href="games.html">games</a>
-        <a href="map.html">map</a> 
+        <a href="webmap/index2.html">map</a> 
     </div>
 
 </div>
 
 <div>
-    <h3> this is a basic html document </h3>
+    <h2> About Cambridge Women Take the Streets </h2>
 
-    <a href="process.html">process page is here</a> 
-
-    <h3> that we can use </h3>
-
-    <a href="games.html">here's a snake game, just to test</a>
+    <h3> <b>Women Take the Streets</b> focuses on disparities in the representation of women who live or have lived in Cambridge, utilizing an Instagram filter, 
+        map of gender disparities in representation, and profiles of women of Cambridge. <br>
+        <br />
+        Our project attempts to fulfill Mei-Po Kwan’s feminist visualization design principles by grounding mapping practices in our everyday experience 
+        of street signs. We incorporate qualitative and narrative components into spatial representations of historical figures, 
+        which a pedestrian might otherwise never consider to be a political process. <br>
+        <br />
+        Our <a href="process.html">Instagram filter</a> is one technique which, by augmenting reality, aligns with 
+        Sandra Harding’s call for strong objectivity views. The filter works toward more inclusive knowledge production by literally centering the standpoints of 
+        women who may have been excluded in their own times, and whose lives may have since gone without significant public commemoration.
+        <br>
+        <br />
+        D’Ignazio and Klein remind us to “emphasize representational strategies premised on multiplicity rather than binaries, and acknowledge the limits of any binaristic view”, 
+        and suggest better representations of gender are continuous or multidimensional (Feminist Data Visualization). Though our <a href="map.html">map of Cambridge</a> with color-coded street names attempts 
+        to show disparities by gender, gender is better represented as a spectrum and not categories. In particular, though our dataset currently contains ascribed gender of historical figures
+        in a binary fashiom, we recognize the existence and need to commemorate the lives of non-binary people and transgender women. For more resources for learning about and teaching gender,
+        visit <a href="https://www.tolerance.org/topics/gender-sexual-identity">Teaching Tolerance</a>. <br>
+        <br />
+        Our flippable and printable <a href="games.html">playing cards</a> profile notable women from the Cambridge Women’s Heritage Project and research on enslaved peoples who once lived in Cambridge conducted by Grace Woodward.  
+        </h3>
 </div>
 
 </html>
