updated index and webmap

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         in a binary fashiom, we recognize the existence and need to commemorate the lives of non-binary people and transgender women. For more resources for learning about and teaching gender,
         visit <a href="https://www.tolerance.org/topics/gender-sexual-identity">Teaching Tolerance</a>. <br>
         <br />
-        Our flippable and printable <a href="games.html">playing cards</a> profile notable women from the Cambridge Women’s Heritage Project and research on enslaved peoples who once lived in Cambridge conducted by Grace Woodward.  
+        Our flippable and printable <a href="cards.html">playing cards</a> profile notable women from the Cambridge Women’s Heritage Project and research on enslaved peoples who once lived in Cambridge conducted by Grace Woodward.  
         </h3>
 </div>
 
