--- a/cards.html
+++ b/cards.html
@@ -34,14 +34,16 @@
         <br /> <br /> Order your own copy from the <a href="https://www.cambridgema.gov/historic/contactforms/historicalcommission">Cambridge Historical Commission</a> to use in your classroom,<br /> or make your own set with your students using the template below.</p>
 
     </div>
-        <div class="container">
-            <div style="float:left;width:50%">
+ <div class="container">
+            <div style="width:50%">
                 <img src="Cards and Box_3.png">
+                <br />
             </div>
-        </div>
+ </div>
 
   
     <div class="container2">
+        <br />
 
     <div class="flip-card">
         <div class="flip-card-inner"> 
@@ -51,7 +53,7 @@
         </div>
 
         <div class="flip-card-back">
-            <img src="WC_6.png" alt="Avatar" style="width:280.8px;height:386.64px;">
+            <img src="WC_5.png" alt="Avatar" style="width:280.8px;height:386.64px;">
         </div>
 
         </div>
@@ -64,7 +66,7 @@
         </div>
 
         <div class="flip-card-back">
-            <img src="WC_5.png" alt="Avatar" style="width:280.8px;height:386.64px;">
+            <img src="WC_6.png" alt="Avatar" style="width:280.8px;height:386.64px;">
         </div>
 
         </div>
