Final presentation updates

--- a/webmap/index2.html
+++ b/webmap/index2.html
@@ -33,7 +33,7 @@
             <div class='nav-icons'>
                 <a href="index.html">return home</a> 
                 <a href="process.html">process</a> 
-                <a href="games.html">games</a>
+                <a href="cards.html">games</a>
                 <a href="map.html">map</a> 
             </div>
         
