--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class='nav-icons'>
         <a href="index.html">return home</a> 
         <a href="process.html">process</a> 
-        <a href="games.html">games</a>
+        <a href="cards.html">games</a>
         <a href="webmap/index2.html">map</a> 
     </div>
 
@@ -26,11 +26,12 @@
     <h2> About Cambridge Women Take the Streets </h2>
 
     <h3> <b>Women Take the Streets</b> focuses on disparities in the representation of women who live or have lived in Cambridge, utilizing an Instagram filter, 
-        map of gender disparities in representation, and profiles of women of Cambridge. <br>
+        streetmap, and profiles of women of Cambridge. About 248,000 feet of the streets of Cambrdige are named after men, 
+        while 17,450 feet were named after women -- that is only 7% of what men have. <br>
         <br />
         Our project attempts to fulfill Mei-Po Kwan’s feminist visualization design principles by grounding mapping practices in our everyday experience 
-        of street signs. We incorporate qualitative and narrative components into spatial representations of historical figures, 
-        which a pedestrian might otherwise never consider to be a political process. <br>
+        of street signs. We incorporate qualitative and narrative components into the spatial representations of historical figures, 
+        symbols which a pedestrian might otherwise never consider to be the result of a political process. <br>
         <br />
         Our <a href="process.html">Instagram filter</a> is one technique which, by augmenting reality, aligns with 
         Sandra Harding’s call for strong objectivity views. The filter works toward more inclusive knowledge production by literally centering the standpoints of 
@@ -43,7 +44,8 @@
         in a binary fashiom, we recognize the existence and need to commemorate the lives of non-binary people and transgender women. For more resources for learning about and teaching gender,
         visit <a href="https://www.tolerance.org/topics/gender-sexual-identity">Teaching Tolerance</a>. <br>
         <br />
-        Our flippable and printable <a href="cards.html">playing cards</a> profile notable women from the Cambridge Women’s Heritage Project and research on enslaved peoples who once lived in Cambridge conducted by Grace Woodward.  
+        Our interactive <a href="cards.html">playing cards</a> profile notable women from the Cambridge Women’s Heritage Project and research on enslaved peoples of Cambridge conducted by Grace Woodward.
+        You can print out the cards, or even add your own heroes!
         </h3>
 </div>
 
