--- a/index.html
+++ b/index.html
@@ -10,23 +10,39 @@
 <div class='header'>
 
     <div class='site-title'>
-        <h1>WOMEN TAKE THE STREETS</h1>
+        <h1> WOMEN TAKE THE STREETS </h1>
     </div>
 
     <div class='nav-icons'>
-        <a href="index.html">return home</a> 
-        <a href="process.html">process</a> 
-        <a href="cards.html">games</a>
-        <a href="webmap/index2.html">map</a> 
+        <div class="icon">
+            <a href="index.html">
+                <div class="icon">home</div>
+            </a>
+        </div> 
+        <div class="icon">
+            <a href="process.html">
+                <div class="icon">process</div>
+            </a> 
+        </div>
+        <div class="icon">
+            <a href="cards.html">
+                <div class="icon">cards</div>
+            </a>
+        </div>
+        <div class="icon">
+            <a href="webmap/index2.html">
+                <div class="icon">map</div>
+            </a> 
+        </div>
     </div>
 
 </div>
 
-<div>
+<div class="content">
     <h2> About Cambridge Women Take the Streets </h2>
 
     <h3> <b>Women Take the Streets</b> focuses on disparities in the representation of women who live or have lived in Cambridge, utilizing an Instagram filter, 
-        streetmap, and profiles of women of Cambridge. About 248,000 feet of the streets of Cambrdige are named after men, 
+        streetmap, and profiles of women of Cambridge. About 248,000 feet of the streets of Cambridge are named after men, 
         while 17,450 feet were named after women -- that is only 7% of what men have. <br>
         <br />
         Our project attempts to fulfill Mei-Po Kwan’s feminist visualization design principles by grounding mapping practices in our everyday experience 
