--- a/cards.html
+++ b/cards.html
@@ -13,20 +13,36 @@
 
 <div class='header'>
 
-   <!--  <div class='site-title'>
-        <h1></h1>
-    </div> -->
+    <div class='site-title'>
+        <h1> WOMEN TAKE THE STREETS </h1>
+    </div>
 
     <div class='nav-icons'>
-        <a href="index.html">return home</a> 
-        <a href="process.html">process</a> 
-        <a href="games.html">games</a>
-        <a href="map.html">map</a> 
-        <a href="cards.html">Women of Cambridge Cards</a> 
+        <div class="icon">
+            <a href="index.html">
+                <div class="icon">home</div>
+            </a>
+        </div> 
+        <div class="icon">
+            <a href="process.html">
+                <div class="icon">process</div>
+            </a> 
+        </div>
+        <div class="icon">
+            <a href="cards.html">
+                <div class="icon">cards</div>
+            </a>
+        </div>
+        <div class="icon">
+            <a href="webmap/index2.html">
+                <div class="icon">map</div>
+            </a> 
+        </div>
     </div>
 
 </div>
 
+<div class="content">
 <div>
     <h1> Women of Cambridge Cards</h1>
     <h3> About</h3>
@@ -108,6 +124,7 @@
       </ol> </p>
     </div>
 
+</div>
 </div>
 
 
