process to filter

--- a/webmap/index2.html
+++ b/webmap/index2.html
@@ -38,7 +38,7 @@
             </div> 
             <div class="icon">
                 <a href="../process.html">
-                    <div class="icon">process</div>
+                    <div class="icon">filter</div>
                 </a> 
             </div>
             <div class="icon">
