--- a/cards.html
+++ b/cards.html
@@ -25,7 +25,7 @@
         </div> 
         <div class="icon">
             <a href="process.html">
-                <div class="icon">process</div>
+                <div class="icon">filter</div>
             </a> 
         </div>
         <div class="icon">
