--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             </a>
         </div> 
         <div class="icon">
-            <a href="process.html">
-                <div class="icon">process</div>
+            <a href="process.html">filter</div>
             </a> 
         </div>
         <div class="icon">
