remove process page

--- a/cards.html
+++ b/cards.html
@@ -23,11 +23,11 @@
                 <div class="icon">home</div>
             </a>
         </div> 
-        <div class="icon">
+        <!-- <div class="icon">
             <a href="process.html">
                 <div class="icon">filter</div>
             </a> 
-        </div>
+        </div> -->
         <div class="icon">
             <a href="cards.html">
                 <div class="icon">cards</div>
