--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <div class="icon">home</div>
             </a>
         </div> 
-        <div class="icon">
+        <!-- <div class="icon">
             <a href="process.html">process</div>
             </a> 
-        </div>
+        </div> -->
         <div class="icon">
             <a href="cards.html">
                 <div class="icon">cards</div>
