--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </a>
         </div> 
         <!-- <div class="icon">
-            <a href="process.html">process</div>
+            <a href="https://instagram.com/a/r/?effect_id=243090973699626">filter</div>
             </a> 
         </div> -->
         <div class="icon">
@@ -48,7 +48,7 @@
         of street signs. We incorporate qualitative and narrative components into the spatial representations of historical figures, 
         symbols which a pedestrian might otherwise never consider to be the result of a political process. <br>
         <br />
-        Our <a href="process.html">Instagram filter</a> is one technique which, by augmenting reality, aligns with 
+        Our <a href="https://instagram.com/a/r/?effect_id=243090973699626">Instagram filter</a> is one technique which, by augmenting reality, aligns with 
         Sandra Harding’s call for strong objectivity views. The filter works toward more inclusive knowledge production by literally centering the standpoints of 
         women who may have been excluded in their own times, and whose lives may have since gone without significant public commemoration.
         <br>
