--- a/cards.html
+++ b/cards.html
@@ -23,10 +23,10 @@
                 <div class="icon">home</div>
             </a>
         </div> 
-        <!-- <div class="icon">
+        <div class="icon">
             <a href="process.html">
                 <div class="icon">filter</div>
-            </a> 
+            </a>
         </div> -->
         <div class="icon">
             <a href="cards.html">
@@ -49,8 +49,9 @@
     <p> This set of playing cards features a diverse group of women from the history of Cambridge, Massachusetts.
         <br /> <br /> Order your own copy from the <a href="https://www.cambridgema.gov/historic/contactforms/historicalcommission">Cambridge Historical Commission</a> to use in your classroom,<br /> or make your own set with your students using the template below.</p>
 
-    </div>
- <div class="container">
+</div>
+
+<div class="container">
             <div style="width:50%">
                 <img src="Cards and Box_3.png">
                 <br />
