--- a/webmap/index2.html
+++ b/webmap/index2.html
@@ -32,17 +32,17 @@
     
         <div class='nav-icons'>
             <div class="icon">
-                <a href="../index.html">
+                <a href="/index.html">
                     <div class="icon">home</div>
                 </a>
             </div> 
-            <!-- <div class="icon">
-                <a href="../process.html">
-                    <div class="icon">filter</div>
-                </a> 
-            </div> -->
             <div class="icon">
-                <a href="../cards.html">
+                <a href="/process.html">
+                    <div class="icon">filter</div>
+                </a>
+            </div>
+            <div class="icon">
+                <a href="/cards.html">
                     <div class="icon">cards</div>
                 </a>
             </div>
@@ -54,6 +54,13 @@
         </div>
     
     </div>
+
+        <div class="content">
+            <h3> Mapping Gender </h3>
+            <p> While this map of Cambridge with color-coded street names attempts to show disparities by gender, gender is better represented as a spectrum and not categories. In particular, though our dataset currently contains ascribed gender of historical figures
+                in a binary fashiom, we recognize the existence and need to commemorate the lives of non-binary people and transgender women. For more resources for learning about and teaching gender,
+                visit <a href="https://www.tolerance.org/topics/gender-sexual-identity">Teaching Tolerance</a>. <br></p>
+        </div>
 
         <div id="map">   </div>
 
