--- a/webmap/index2.html
+++ b/webmap/index2.html
@@ -42,7 +42,7 @@
                 </a>
             </div>
             <div class="icon">
-                <a href="/cards.html">
+                <a href="../cards.html">
                     <div class="icon">cards</div>
                 </a>
             </div>
