--- a/webmap/index2.html
+++ b/webmap/index2.html
@@ -32,12 +32,12 @@
     
         <div class='nav-icons'>
             <div class="icon">
-                <a href="/index.html">
+                <a href="../index.html">
                     <div class="icon">home</div>
                 </a>
             </div> 
             <div class="icon">
-                <a href="/process.html">
+                <a href="../process.html">
                     <div class="icon">filter</div>
                 </a>
             </div>
