matching language of README
language update

--- a/index.html
+++ b/index.html
@@ -45,19 +45,18 @@
         streetmap, and profiles of women of Cambridge. About 248,000 feet of the streets of Cambridge are named after men, 
         while 17,450 feet were named after women -- that is only 7% of what men have. <br>
         <br />
-        Our project attempts to fulfill Mei-Po Kwan’s feminist visualization design principles by grounding mapping practices in our everyday experience 
-        of street signs. We incorporate qualitative and narrative components into the spatial representations of historical figures, 
-        symbols which a pedestrian might otherwise never consider to be the result of a political process. <br>
+        Our project attempts to fulfill Mei-Po Kwan’s feminist visualization design principles by grounding mapping practices in our everyday experience of street 
+        signs (Mei-Po Kwan, 2002). Street signs are symbols which the viewer might never consider to be the result of historically-skewed local political processes. 
+        We seek to support women’s activism that challenges traditional power relations and forms of governance using GIS-based research and design. <br>
         <br />
-        Our <a href="process.html">Instagram filter</a> is one technique which, by augmenting reality, aligns with 
-        Sandra Harding’s call for strong objectivity views. The filter works toward more inclusive knowledge production by literally centering the standpoints of 
-        women who may have been excluded in their own times, and whose lives may have since gone without significant public commemoration.
-        <br>
+        Berg and Kearns’ Naming as Norming (1996) describes how naming places reinforces dominant societal ideologies by providing normality and legitimacy. 
+        By augmenting reality, our <a href="process.html">Instagram filter</a> works toward more inclusive knowledge production. The filter centers the standpoints 
+        of women who may have been excluded in their own times (and whose lives may have since gone without significant public commemoration) on the user's phone. <br>
         <br />
-        D’Ignazio and Klein remind us to “emphasize representational strategies premised on multiplicity rather than binaries, and acknowledge the limits of any binaristic view”, 
-        and suggest better representations of gender are continuous or multidimensional (Feminist Data Visualization). Though our <a href="map.html">map of Cambridge</a> with color-coded street names attempts 
-        to show disparities by gender, gender is better represented as a spectrum and not categories. In particular, though our dataset currently contains ascribed gender of historical figures
-        in a binary fashiom, we recognize the existence and need to commemorate the lives of non-binary people and transgender women. For more resources for learning about and teaching gender,
+        Our <a href="map.html">map of Cambridge</a> attempts to show disparities by gender with color-coded street names. Though the dataset the map is based on currently 
+        ascribes gender of historical figures in a binary fashion, we recognize the existence and need to commemorate the lives of non-binary people and transgender women.  
+        D’Ignazio and Klein suggest better representations of gender are continuous or multidimensional (Feminist Data 
+        Visualization, 2020). For more resources for learning about and teaching gender,
         visit <a href="https://www.tolerance.org/topics/gender-sexual-identity">Teaching Tolerance</a>. <br>
         <br />
         Our interactive <a href="cards.html">playing cards</a> profile notable women from the Cambridge Women’s Heritage Project and research on enslaved peoples of Cambridge conducted by Grace Woodward.
