--- a/webmap/index2.html
+++ b/webmap/index2.html
@@ -31,31 +31,31 @@
             </div>
 
       <div class='header'>
-
- 
-    <div class='nav-icons'>
-        <div class="icon">
-            <a href="../cambridge-women/index.html">
-                <div class="icon">home</div>
-            </a>
-        </div> 
-        <div class="icon">
-            <a href="../cambridge-women/process.html">
-                <div class="icon">filter</div>
-            </a>
-        </div>
-        <div class="icon">
-            <a href="../cambridge-women/cards.html">
-                <div class="icon">cards</div>
-            </a>
-        </div>
-        <div class="icon">
-            <a href="https://www.dropbox.com/scl/fi/d86plbmcybrj9ub7pgjn1/Map-of-Cambridge-Street-Names.paper?dl=0&rlkey=k9h6nm2v7mbev7pvgz692ck7h/">
-                <div class="icon">map process</div>
-            </a> 
-        </div>
-    </div>  
+            <div class='nav-icons'>
+                <div class="icon">
+                    <a href="https://lennajohnsen.github.io/cambridge-women/index.html">
+                        <div class="icon">home</div>
+                    </a>
+                </div> 
+                <div class="icon">
+                    <a href="https://lennajohnsen.github.io/cambridge-women/process.html">
+                        <div class="icon">filter</div>
+                    </a>
+                </div>
+                <div class="icon">
+                    <a href="https://lennajohnsen.github.io/cambridge-women/cards.html">
+                        <div class="icon">cards</div>
+                    </a>
+                </div>
+                <div class="icon">
+                    <a href="https://lennajohnsen.github.io/cambridge-women/">
+                        <div class="icon">DIY</div>
+                    </a> 
+                </div>
+            </div>  
+        </div>  
     
+            
         <div id="map">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
