--- a/webmap/index2.html
+++ b/webmap/index2.html
@@ -11,13 +11,12 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;600&display=swap" rel="stylesheet">
         <style>
-            
-        html, body, #map {
-            width: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
+            html, body, #map {
+                width: 100%;
+                height: 400px;
+                padding: 0;
+                margin: 0;
+            }
         </style>
         
 
