--- a/webmap/index2.html
+++ b/webmap/index2.html
@@ -13,7 +13,7 @@
         <style>
             html, body, #map {
                 width: 100%;
-                height: 1600px;
+                height: 2000px;
                 padding: 0;
                 margin: 0;
             }
@@ -46,8 +46,8 @@
                     </a>
                 </div>
                 <div class="icon">
-                    <a href="https://lennajohnsen.github.io/cambridge-women/">
-                        <div class="icon">DIY</div>
+                    <a href="https://github.com/lennajohnsen/cambridge-women/">
+                        <div class="icon">GitHub</div>
                     </a> 
                 </div>
             </div>  
