--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         By augmenting reality, our <a href="process.html">Instagram filter</a> works toward more inclusive knowledge production. The filter centers the standpoints 
         of women who may have been excluded in their own times (and whose lives may have since gone without significant public commemoration) on the user's phone. <br>
         <br />
-        Our <a href="https://lennajohnsen.github.io/cambridge-women/webmap/index2.html#13/42.3773/-71.1226">map of Cambridge</a> attempts to show disparities by gender with color-coded street names. Though the dataset the map is based on currently 
+        Our <a href="https://lennajohnsen.github.io/cambridge-women/webmap/index2.html">map of Cambridge</a> attempts to show disparities by gender with color-coded street names. Though the dataset the map is based on currently 
         ascribes gender of historical figures in a binary fashion, we recognize the existence and need to commemorate the lives of non-binary people and transgender women.  
         D’Ignazio and Klein suggest better representations of gender are continuous or multidimensional (Feminist Data 
         Visualization, 2020). For more resources for learning about and teaching gender,
