--- a/webmap/index2.html
+++ b/webmap/index2.html
@@ -13,7 +13,7 @@
         <style>
             html, body, #map {
                 width: 100%;
-                height: 2000px;
+                height: 100%;
                 padding: 0;
                 margin: 0;
             }
